--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>ZATech - South Africa's Largest Tech Community</title>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/64px-south-africa_flag_icon_round.svg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Content Security Policy -->
@@ -35,7 +36,7 @@
       upgrade-insecure-requests;
     ">
     
-    <title>ZATech Website</title>
+    <!-- <title>ZATech - South Africa's Largest Tech Community</title> -->
   </head>
   <body>
     <div id="root"></div>
